--- a/gen-ai/inference/mistral-7b-instruct-vllm-rayserve-inf2/vllm-rayserve-deployment.yaml
+++ b/gen-ai/inference/mistral-7b-instruct-vllm-rayserve-inf2/vllm-rayserve-deployment.yaml
@@ -194,7 +194,7 @@ spec:
               max_replicas: 3
               target_num_ongoing_requests_per_replica: 1
             ray_actor_options:
-              num_cpus: 2
+              num_cpus: 6
               resources: {"neuron_cores": 2}
               runtime_env:
                 env_vars:
@@ -256,9 +256,6 @@ spec:
               limits:
                 cpu: "2"
                 memory: "4G"
-              requests:
-                cpu: "2"
-                memory: "4G"
             env:
             - name: PORT
               value: "8000"
@@ -283,7 +280,7 @@ spec:
       rayStartParams:
         # This setting is critical for inf2/Trn1 node autoscaling with RayServe
         resources: '"{\"neuron_cores\": 2}"'
-        num-cpus: "2"
+        num-cpus: "6"
       template:
         spec:
           initContainers:
@@ -310,9 +307,8 @@ spec:
                 exec:
                   command: ["/bin/sh", "-c", "ray stop"]
             resources:
-              limits: # replace this to use inf2.8xlarge; Takes 10 mins 40 secs to load Llama3 8b model with 21.3GB Accelerator memory
-                aws.amazon.com/neuron: "1"
-              requests:
+              limits:
+                memory: "28G"
                 aws.amazon.com/neuron: "1"
             env:
             - name: PORT
@@ -322,7 +318,7 @@ spec:
             - name: NEURON_RT_LOG_LEVEL
               value: "INFO"
             - name: RAY_memory_usage_threshold
-              value: "0.999"
+              value: "0.99"
             volumeMounts:
             - mountPath: /tmp/ray
               name: ray-logs
@@ -345,7 +341,7 @@ spec:
           - name: workdir
             emptyDir: {}
           nodeSelector:
-            instanceType: inferentia-inf2
+            instanceType: trainium-trn1
             provisionerType: Karpenter
           tolerations:
           - key: "aws.amazon.com/neuron"
