--- a/analytics/terraform/spark-k8s-operator/examples/benchmark/tpcds-benchmark-1t-r6g.yaml
+++ b/analytics/terraform/spark-k8s-operator/examples/benchmark/tpcds-benchmark-1t-r6g.yaml
@@ -3,7 +3,7 @@
 # 1. Set up an S3 bucket to store the generated data.
 # 2. Update the `eks.tf` file to modify `min_size=6` and `desired_size=6` for the managed node group `"spark_graviton_r6g"`, then run `terraform apply`.
 # 3. Confirm that the `"spark-team-a"` namespace exists.
-# 4. Replace `<S3_BUCKET>` in the configuration with your actual bucket name.
+# 4. Replace `spark-benchmarks-tpcds-data-1tb` in the configuration with your actual bucket name.
 # 5. Run `kubectl apply -f <filename>` to apply the configuration.
 
 ---
@@ -13,9 +13,9 @@ metadata:
   name: tpcds-benchmark-1tb-r6g
   namespace: spark-team-a
 spec:
-  batchScheduler: yunikorn
-  batchSchedulerOptions:
-    queue: root.default
+  # batchScheduler: yunikorn
+  # batchSchedulerOptions:
+  #   queue: root.default
   type: Scala
   mode: cluster
   image: public.ecr.aws/data-on-eks/spark3.5.3-scala2.12-java17-python3-ubuntu-tpcds:v2
@@ -25,9 +25,9 @@ spec:
   mainApplicationFile: local:///opt/spark/examples/jars/eks-spark-benchmark-assembly-1.0.jar
   arguments:
     # TPC-DS data location
-    - "s3a://<S3_BUCKET>/TPCDS-TEST-1TB"
+    - "s3a://spark-benchmarks-tpcds-data-1tb/TPCDS-TEST-1TB"
     # results location
-    - "s3a://<S3_BUCKET>/TPCDS-TEST-1T-RESULT"
+    - "s3a://spark-benchmarks-tpcds-data-1tb/TPCDS-TEST-1T-RESULT"
     # Path to kit in the docker image
     - "/opt/tpcds-kit/tools"
     # Data Format
@@ -50,7 +50,7 @@ spec:
     "spark.sql.adaptive.localShuffleReader.enabled": "true"
     "spark.sql.adaptive.coalescePartitions.enabled": "true"
     "spark.sql.adaptive.skewJoin.enabled": "true"
-    "spark.kubernetes.executor.podNamePrefix": "benchmark-exec-r6g-"
+    "spark.kubernetes.executor.podNamePrefix": "benchmark-exec-r6g"
    # S3 Optimizations
     # "spark.hadoop.fs.s3a.aws.credentials.provider": "com.amazonaws.auth.WebIdentityTokenCredentialsProvider" # This is using AWS SDK V1 in maintenance mode
     "spark.hadoop.fs.s3a.aws.credentials.provider.mapping": "com.amazonaws.auth.WebIdentityTokenCredentialsProvider=software.amazon.awssdk.auth.credentials.WebIdentityTokenFileCredentialsProvider"
@@ -93,10 +93,10 @@ spec:
     "spark.hadoop.fs.s3a.multipart.purge": "true"               # Automatically clear failed multipart uploads
     "spark.hadoop.fs.s3a.multipart.threshold": "134217728"      # 128 MB threshold to start multi-part upload
   driver:
-    cores: 4
-    coreLimit: "4.3"
-    memory: "5g"
-    memoryOverhead: "1g"
+    cores: 5
+    # coreLimit: "4.3"
+    memory: "20g"
+    memoryOverhead: "6g"
     serviceAccount: spark-team-a
     securityContext:
       runAsUser: 185
@@ -106,12 +106,12 @@ spec:
     nodeSelector:
       NodeGroupType: spark-graviton-benchmark-mng-r6g
   executor:
-    cores: 4
-    coreLimit: "4.3"
-    memory: "6g"
-    memoryOverhead: "2g"
+    cores: 5
+    # coreLimit: "4.3"
+    memory: "20g"
+    memoryOverhead: "6g"
     # 8 executors per node
-    instances: 47
+    instances: 36 # 6 pods per node; 6 nodes with MNG
     serviceAccount: spark-team-a
     securityContext:
       runAsUser: 185
