--- a/ai-ml/aibrix/examples/deepseek-distill-neuron.yaml
+++ b/ai-ml/aibrix/examples/deepseek-distill-neuron.yaml
@@ -37,8 +37,6 @@ spec:
             limits:
               aws.amazon.com/neuron: "1"
             requests:
-              cpu: "28"
-              memory: "100G"
               aws.amazon.com/neuron: "1"
           livenessProbe:
             failureThreshold: 3
@@ -61,7 +59,7 @@ spec:
             successThreshold: 1
             timeoutSeconds: 1
       nodeSelector:
-        instanceType: inferentia-inf2
+        NodeGroupType: inferentia-inf2
       tolerations:
         - key: "aws.amazon.com/neuron"
           operator: "Exists"
