--- a/ai-ml/aibrix/examples/deepseek-distill-neuron.yaml
+++ b/ai-ml/aibrix/examples/deepseek-distill-neuron.yaml
@@ -44,7 +44,7 @@ spec:
               path: /health
               port: 8000
               scheme: HTTP
-            initialDelaySeconds: 400
+            initialDelaySeconds: 500
             periodSeconds: 30
             successThreshold: 1
             timeoutSeconds: 1
@@ -54,12 +54,12 @@ spec:
               path: /health
               port: 8000
               scheme: HTTP
-            initialDelaySeconds: 400
+            initialDelaySeconds: 500
             periodSeconds: 30
             successThreshold: 1
             timeoutSeconds: 1
       nodeSelector:
-        NodeGroupType: inferentia-inf2
+        instanceType: trainium-trn1
       tolerations:
         - key: "aws.amazon.com/neuron"
           operator: "Exists"
